update grammar in look

--- a/look.html
+++ b/look.html
@@ -139,7 +139,7 @@
     <div class="container">
         <div id="info">
             <p>
-               In <i>The Future of Folklore Studies in America: The Urban Frontier</i>, folklorist Barbara Kirshenblatt-Gimblett, aka BKG, there is a quote that not only perfectly expresses the general purpose and drive of folklore and its studies but also gives reason for the existence and spread of wall art like graffiti and murals: “[The] New World has preserved what the Old World has forgotten.” 
+               In <i>The Future of Folklore Studies in America: The Urban Frontier</i> by folklorist Barbara Kirshenblatt-Gimblett, aka BKG, there is a quote that not only perfectly expresses the general purpose and drive of folklore and its studies but also gives reason for the existence and spread of wall art like graffiti and murals: “[The] New World has preserved what the Old World has forgotten.” 
             </p>
             <p class="quote">
                 “The New World has preserved what the Old World has forgotten.” 
