fixing for firefox
testing nav button ting

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbuttons">
-                <button class="btn navbar-btn" id="look"><a href="look.html">Lore Look</a></button>
+                <a href="look.html">
+                    <button class="btn navbar-btn">
+                        Lore Look
+                    </button>
+                </a>
                 <button class="btn navbar-btn" id="murals"><a href="mm.html">Murals</a></button>
                 <button class="btn navbar-btn" id="graffiti"><a href="gg.html">Graffiti</a></button>
                 <button class="btn navbar-btn" id="campus"><a href="campus.html">Campus</a></button>
