--- a/cited.html
+++ b/cited.html
@@ -35,11 +35,11 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbuttons">
-                <button class="btn navbar-btn" id="look"><a href="look.html">Lore Look</a></button>
-                <button class="btn navbar-btn" id="murals"><a href="mm.html">Murals</a></button>
-                <button class="btn navbar-btn" id="graffiti"><a href="gg.html">Graffiti</a></button>
-                <button class="btn navbar-btn" id="campus"><a href="campus.html">Campus</a></button>
-                <button class="btn navbar-btn" id="sources"><a href="cited.html">Sources</a></button>
+                <a href="look.html"><button class="btn navbar-btn" id="look">Lore Look</button></a>
+                <a href="mm.html"><button class="btn navbar-btn" id="murals">Murals</button></a>
+                <a href="gg.html"><button class="btn navbar-btn" id="graffiti">Graffiti</button></a>
+                <a href="campus.html"><button class="btn navbar-btn" id="campus">Campus</button></a>
+                <a href="cited.html"><button class="btn navbar-btn" id="sources">Sources</button></a>
                 <canvas id="c" onclick="off()"></canvas>
                 <button class="btn navbar-btn" #id="thing" onclick="on()">A Thing</button>
                 
